use jeps api ref